# tfscr

./: CMakeLists.txt  README
cmake/: FindCLANG.cmake  FindGMock.cmake  FindLLVM.cmake  GenerateTestFilesPaths.cmake
libtfscr/: CMakeLists.txt  ClangFacade.cpp  ClangFacade.h  CommonTypes.h  CustomASTConsumer.cpp  CustomASTConsumer.h  CustomDiagnosticConsumer.cpp  CustomDiagnosticConsumer.h  LocalVariablesVisitor.cpp  LocalVariablesVisitor.h  VariablesVisitor.cpp  VariablesVisitor.h
tests/: .gitignore  CMakeLists.txt  CustomASTConsumer.cpp  CustomASTConsumer.h  VariablesVisitorTests.cpp  main.cpp  test.c
tests/mocks/: MockVariablesVisitor.h
tests/test_data/: test000000.c  test000001.cpp
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
